@@ -1,3 +1,11 @@
+2007-08-08  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* nnshimbun.el (gnus-group-make-shimbun-group): Use encoded group name
+	when accessing it as an ephemeral group; don't kill group that isn't
+	ephemeral; pass group name that isn't encoded to gnus-group-make-group.
+	(gnus-group-make-shimbun-groups): Pass group name that isn't encoded to
+	gnus-group-make-group.
+
 2007-08-07  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* sb-nikkei.el (shimbun-nikkei-group-table): Update url for gyosuuchi
